--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,10 +15,11 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.github.gustavobarbosab.spotifyclone.ui.home.widget.MusicalGenre
+        android:id="@+id/popSection"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
-        app:genreTitle="Teste Gustavo"
+        app:genreTitle="POP"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/header" />
 </androidx.constraintlayout.widget.ConstraintLayout>
